# procgengame

./: .clangd  .gitignore  CMakeLists.txt  Shader.cpp  Shader.h  camera.c  camera.h  input.c  input.cpp  input.h  main.c  main.cpp  movement.c  movement.h  util.c  util.cpp  util.h
glad/include/glad/: glad.h
glad/src/: glad.c
render/: Camera.cpp  Camera.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h
shaders/: f.glsl  v.glsl
